fix social links spacing

--- a/_styles/master.scss
+++ b/_styles/master.scss
@@ -121,13 +121,18 @@ footer {
 }
 
 .social {
-  a:last-child {
-    margin: 0 0 0 0.35em;
+
+  a {
+    margin: 0 0.5em;
   }
 
-  a:first-child {
-    margin: 0 0.35em 0 0;
-  }
+  // a:last-child {
+  //   margin: 0 0 0 0.35em;
+  // }
+
+  // a:first-child {
+  //   margin: 0 0.35em 0 0;
+  // }
 
   a:visited {
     color: $linkColor;
